--- a/ProjectSourceCode/finlog.html
+++ b/ProjectSourceCode/finlog.html
@@ -7,13 +7,22 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
   />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="bg-light">
 
-  <header class="p-2 bg-secondary text-white d-flex justify-content-between align-items-center">
-    <button class="btn btn-outline-light">≡</button>
-    <h1 class="m-0">FINLOG</h1>
-    <a href="/login" class="btn btn-outline-light">Login</a>
+  <header class="p-2 bg-secondary text-white">
+    <div class="d-flex justify-content-between align-items-center">
+      <button class="btn btn-outline-light">≡</button>
+      <div class="text-center">
+        <h1 class="m-0">FINLOG</h1>
+        <div class="mt-1">
+          <a href="finlog.html" class="btn btn-outline-light btn-sm me-2">Fish Log</a>
+          <a href="map_page.html" class="btn btn-outline-light btn-sm">Map</a>
+        </div>
+      </div>
+      <a href="/login" class="btn btn-outline-light">Login</a>
+    </div>
   </header>
 
   <main class="container my-4">
