--- a/ProjectSourceCode/map_page.html
+++ b/ProjectSourceCode/map_page.html
@@ -17,6 +17,7 @@
       <div class="text-center">
         <h1 class="m-0">FINLOG</h1>
         <div class="mt-1">
+          <a href="home.html" class="btn btn-outline-light btn-sm me-2">Home</a>
           <a href="finlog.html" class="btn btn-outline-light btn-sm me-2">Fish Log</a>
           <a href="map_page.html" class="btn btn-outline-light btn-sm">Map</a>
         </div>
