--- a/ProjectSourceCode/home.html
+++ b/ProjectSourceCode/home.html
@@ -26,9 +26,51 @@
     </div>
   </header>
 
-  <main class="container my-3">
-      
-  </main>
+  <div class="container-fluid">
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <!-- Scrollable Feed -->
+        <div class="overflow-auto" style="max-height: 100vh; padding-right: 1rem;">
+          
+          <!-- Post 1 -->
+          <div class="card mb-4">
+            <img src="../assets/fishExample.png" class="card-img-top" alt="Post image">
+            <div class="card-body">
+              <p class="card-text">Seemed like a decent reason to post after 18 years</p>
+              <hr>
+              <h6>Comments</h6>
+              <div class="comments" style="max-height: 200px; overflow-y: auto;">
+                <p><strong>brody_reece:</strong> Gonna miss you 😘</p>
+                <p><strong>nathan.g2468:</strong> Yo is that huzzson?</p>
+                <p><strong>dylanj2926:</strong> Ultimate adversity overcomer</p>
+              </div>
+              <form class="mt-2">
+                <input type="text" class="form-control" placeholder="Add a comment...">
+              </form>
+            </div>
+          </div>
+  
+          <!-- Post 2 -->
+          <div class="card mb-4">
+            <img src="../assets/fishExample2.png" class="card-img-top" alt="Post image">
+            <div class="card-body">
+              <p class="card-text">Another description for a different post.</p>
+              <hr>
+              <h6>Comments</h6>
+              <div class="comments" style="max-height: 200px; overflow-y: auto;">
+                <p><strong>user123:</strong> Love this!</p>
+                <p><strong>coolguy:</strong> Amazing photo 🔥</p>
+              </div>
+              <form class="mt-2">
+                <input type="text" class="form-control" placeholder="Add a comment...">
+              </form>
+            </div>
+          </div>
+  
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
