Updated login and dashboard pages

--- a/ProjectSourceCode/dashboard.html
+++ b/ProjectSourceCode/dashboard.html
@@ -19,10 +19,11 @@
         <div class="mt-1">
           <a href="home.html" class="btn btn-outline-light btn-sm me-2">Home</a>
           <a href="finlog.html" class="btn btn-outline-light btn-sm me-2">Fish Log</a>
-          <a href="map_page.html" class="btn btn-outline-light btn-sm">Map</a>
+          <a href="map_page.html" class="btn btn-outline-light btn-sm me-2">Map</a>
+          <a href="dashboard.html" class="btn btn-outline-light btn-sm">Dashboard</a>
         </div>
       </div>
-      <a href="/login" class="btn btn-outline-light">Login</a>
+      <a href="/logout" class="btn btn-outline-light">Logout</a>
     </div>
   </header>
 
