--- a/ProjectSourceCode/map_page.html
+++ b/ProjectSourceCode/map_page.html
@@ -20,12 +20,13 @@
           <a href="home.html" class="btn btn-outline-light btn-sm me-2">Home</a>
           <a href="finlog.html" class="btn btn-outline-light btn-sm me-2">Fish Log</a>
           <a href="map_page.html" class="btn btn-outline-light btn-sm">Map</a>
+          <a href="upload.html" class="btn btn-outline-light btn-sm">Upload</a>
         </div>
       </div>
       <a href="/login" class="btn btn-outline-light">Login</a>
     </div>
   </header>
-
+  
   <main class="container my-3">
     <h2 class="mb-2">Fishing Locations Map</h2>
     
