--- a/ProjectSourceCode/login.html
+++ b/ProjectSourceCode/login.html
@@ -20,6 +20,7 @@
           <a href="home.html" class="btn btn-outline-light btn-sm me-2">Home</a>
           <a href="finlog.html" class="btn btn-outline-light btn-sm me-2">Fish Log</a>
           <a href="map_page.html" class="btn btn-outline-light btn-sm">Map</a>
+          <a href="upload.html" class="btn btn-outline-light btn-sm">Upload</a>
         </div>
       </div>
       <a href="/login" class="btn btn-outline-light">Login</a>
