--- a/ProjectSourceCode/home.html
+++ b/ProjectSourceCode/home.html
@@ -24,7 +24,7 @@
           <a href="dashboard.html" class="btn btn-outline-light btn-sm">Dashboard</a>
         </div>
       </div>
-      <a href="/logout" class="btn btn-outline-light">Logout</a>
+      <a href="login.html" class="btn btn-outline-light">Login</a>
     </div>
   </header>
 
