--- a/ProjectSourceCode/upload.html
+++ b/ProjectSourceCode/upload.html
@@ -19,11 +19,12 @@
         <div class="mt-1">
           <a href="home.html" class="btn btn-outline-light btn-sm me-2">Home</a>
           <a href="finlog.html" class="btn btn-outline-light btn-sm me-2">Fish Log</a>
-          <a href="map_page.html" class="btn btn-outline-light btn-sm">Map</a>
-          <a href="upload.html" class="btn btn-outline-light btn-sm">Upload</a>
+          <a href="map_page.html" class="btn btn-outline-light btn-sm me-2">Map</a>
+          <a href="upload.html" class="btn btn-outline-light btn-sm me-2">Upload</a>
+          <a href="dashboard.html" class="btn btn-outline-light btn-sm">Dashboard</a>
         </div>
       </div>
-      <a href="/login" class="btn btn-outline-light">Login</a>
+      <a href="login.html" class="btn btn-outline-light">Login</a>
     </div>
   </header>
 
